k8s-manifests/auth-api-deployment-strategy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  namespace: default
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
      - name: auth-api
        image: felipevelasco7/auth-api:latest
        ports:
        - containerPort: 8000
