k8s-manifests/log-message-processor-deployment-strategy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-message-processor
  namespace: default
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: log-message-processor
  template:
    metadata:
      labels:
        app: log-message-processor
    spec:
      containers:
      - name: log-message-processor
        image: felipevelasco7/log-message-processor:latest
        ports:
        - containerPort: 6379
