k8s-manifests/users-api-deployment-strategy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
  namespace: default
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
      - name: users-api
        image: felipevelasco7/users-api:latest
        ports:
        - containerPort: 8080
