k8s-manifests/todos-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todos-api
  template:
    metadata:
      labels:
        app: todos-api
    spec:
      containers:
      - name: todos-api
        image: felipevelasco7/todos-api:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todos-api
spec:
  selector:
    app: todos-api
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
